<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="2"
    android:background="@color/colorGrey"
    android:scrollbars="none">

<include layout="@layout/newaadhar10_toolbar"/>
    <FrameLayout
        android:id="@+id/fl_adplaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:visibility="visible">

        <!--<include layout="@layout/newaadhar10_native_ad_layout18"/>-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/qreka"/>
    </FrameLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/user_entry_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Amount"
                android:textColorHint="@color/Btn_Text"
                app:boxStrokeColor="@color/Btn_Text"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Btn_Text"
                app:hintTextColor="@color/Btn_Text"
                app:startIconTint="@color/Btn_Text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ets_principle_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/Btn_Text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_interest_percentage"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/Btn_Text"
                app:boxStrokeColor="@color/Btn_Text"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Btn_Text"
                app:hintTextColor="@color/Btn_Text"
                app:startIconTint="@color/Btn_Text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ets_interest"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Btn_Text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="MONTHS"
                android:textColorHint="@color/Btn_Text"
                app:boxStrokeColor="@color/Btn_Text"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginTop="5dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Btn_Text"
                app:hintTextColor="@color/Btn_Text"
                app:startIconTint="@color/Btn_Text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ets_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/Btn_Text" />

            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:weightSum="2.0">

                <ImageView
                    android:id="@+id/btns_rest_emi"
                    style="@style/app_large_button_style"
                    android:src="@drawable/newaadhar10_reset"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:text="@string/reset_button_label" />

                <ImageView
                    android:id="@+id/btns_calculate_emi"
                    style="@style/app_large_button_style"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="3dp"
                    android:src="@drawable/newaadhar10_calcuiator"
                    android:text="@string/calculate_button_label" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_entry_layout"
            android:layout_marginBottom="25.0dip"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:layout_marginTop="5dp"
                android:weightSum="2.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="50.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="2.0dip"
                    android:layout_weight="0.7"
                    android:background="@drawable/newaadhar10_edit_text_background"
                    android:gravity="center"
                    android:text="@string/interest_label"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvs_interest_value"
                    style="@style/app_calculated_value_medium_text_style"
                    android:layout_width="0.0dip"
                    android:layout_marginLeft="2.0dip"
                    android:layout_weight="1.3"
                    android:background="@drawable/newaadhar10_edit_text_background"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:layout_marginTop="5dp"
                android:weightSum="2.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="50.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="2.0dip"
                    android:layout_weight="0.7"
                    android:background="@drawable/newaadhar10_edit_text_background"
                    android:gravity="center"
                    android:text="@string/total_amount_label"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvs_total_amount_value"
                    style="@style/app_calculated_value_medium_text_style"
                    android:layout_width="0.0dip"
                    android:layout_marginLeft="2.0dip"
                    android:layout_weight="1.3"
                    android:background="@drawable/newaadhar10_edit_text_background"
                    android:gravity="center" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fl_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/newaadhar10_qb2"
        android:gravity="bottom"
        android:visibility="visible" />

</LinearLayout>